--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 ###### 设置tomcat访问端口号 ######
 server.port=9090
 
+###### 环境配置 ######
+###### spring.profiles.active={profile}
+###### application-{profile}.properties
+spring.profiles.active=dev
+
+#####################
+
 ###### datasource #####################
 #spring.datasource.url=jdbc:mysql://rm-wz9d8ai4762s76r86o.mysql.rds.aliyuncs.com:3306/liuxi?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.url=jdbc:mysql://localhost:3306/easycode?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
