--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,17 @@ server.port=9090
 ###### ª∑æ≥≈‰÷√ ######
 ###### spring.profiles.active={profile}
 ###### application-{profile}.properties
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 #####################
 
 ###### datasource #####################
 #spring.datasource.url=jdbc:mysql://rm-wz9d8ai4762s76r86o.mysql.rds.aliyuncs.com:3306/liuxi?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://localhost:3306/easycode?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.max-active=20
-spring.datasource.max-idle=8
-spring.datasource.min-idle=8
-spring.datasource.initial-size=10
+#spring.datasource.url=jdbc:mysql://localhost:3306/easycode?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.max-active=20
+#spring.datasource.max-idle=8
+#spring.datasource.min-idle=8
+#spring.datasource.initial-size=10
