连接数据库

--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
         <relativePath/>
     </parent>
 
-    <!--<properties>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-    </properties>-->
+    </properties>
 
     <dependencies>
         <dependency>
@@ -26,7 +26,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
@@ -34,7 +34,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.32</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
