--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ###### 设置tomcat访问端口号 ######
-server.port=9090
+server.port=9080
 
 ###### 环境配置 ######
 ###### spring.profiles.active={profile}
@@ -10,11 +10,34 @@ server.port=9090
 
 ###### datasource #####################
 #spring.datasource.url=jdbc:mysql://rm-wz9d8ai4762s76r86o.mysql.rds.aliyuncs.com:3306/liuxi?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://localhost:3306/easycode?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=Liuxi@4528752
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.max-active=20
-spring.datasource.max-idle=8
-spring.datasource.min-idle=8
-spring.datasource.initial-size=10
+#spring.datasource.url=jdbc:mysql://localhost:3306/easycode?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=Liuxi@4528752
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.max-active=20
+#spring.datasource.max-idle=8
+#spring.datasource.min-idle=8
+#spring.datasource.initial-size=10
+#########################################
+
+####### redis #######
+redis.host=127.0.0.1
+redis.port=6379
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+redis.database=0
+# Redis服务器连接密码（默认为空）
+#redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+# 连接超时时间（毫秒）
+redis.timeout=10000
+redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+redis.pool.min-idle=0
+
+
+#####################
